--- a/css/bootstrap-grid.css
+++ b/css/bootstrap-grid.css
@@ -4,6 +4,11 @@
  * Copyright 2011-2018 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
+
+/*
+Editing this file
+*/
+
 @-ms-viewport {
   width: device-width;
 }
