Updating css/bootstrap-grid.css file locally before rebase

--- a/css/bootstrap-grid.css
+++ b/css/bootstrap-grid.css
@@ -13,6 +13,10 @@ Editing this file
 Editing this file for the second time
 */
 
+/*
+Tweaking css/bootstrap-grid.css file on master locally before rebase
+*/
+
 @-ms-viewport {
   width: device-width;
 }
